# portfoliodb

./: .air.toml  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Claude.md  Makefile  README.md  buf.gen.e2e.yaml  buf.gen.go.yaml  buf.gen.ts.yaml  buf.gen.yaml  buf.yaml  build.rs  build_helpers.rs  go.mod  go.sum  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml  claude.yml
cli/google/: auth.go  auth_test.go  exchangemap.go  exchangemap_test.go  formula.go  formula_test.go  gf_exchanges.csv  grpc.go  main.go  sheets.go  sheets_test.go
client/: .env.example  Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
client/app/: globals.css  layout.tsx  page.tsx  providers.tsx
client/contexts/: auth-context.tsx  portfolio-context.tsx  upload-modal-context.tsx
client/hooks/: use-debounce.ts  use-pagination.ts
client/lib/: asset-class.ts  auth-api.test.ts  auth-api.ts  format.ts  grpc-web.test.ts  grpc-web.ts  ingestion-api.test.ts  ingestion-api.ts  portfolio-api.test.ts  portfolio-api.ts  session-lost.ts  splits.test.ts  splits.ts
client/scripts/: dev-with-codegen.sh
docker/: docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.test.yml  docker-compose.yml
docker/client/: Dockerfile  Dockerfile.dev
docker/server/: Dockerfile  Dockerfile.dev  Dockerfile.e2e  Dockerfile.playwright  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.test.yml  docker-compose.yml  envoy.dev.yaml  envoy.yaml
docs/: auth.md  corporate-events.md  csv-format.md  display-currency.md  e2e.md  fixed-point.md  identifiers.md  layout.md  ofx-tx-types.md  performance.md  plan.md  portfolio-views.md  portfoliodb-spec.md  prices.md  telemetry.md  testing.md
docs/style/: go.md  protobuf.md
docs/ui/: admin.md  index.md  information-architecture.md  instruments.md  theme.md  upload.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/cassettes/: error-recovery-reupload.yaml  failed-identification.yaml  fetch-blocks.yaml  idempotent-reupload.yaml  ingestion-flow.yaml  mixed-tx-types.yaml  plugins.yaml  price-import-merge.yaml  stock-split-split-first.yaml  stock-split-tx-first.yaml  tx-update-price-fetch.yaml
e2e/fixtures/: bad-format.csv  fetch-blocks-stocks.csv  identification-corrected.csv  instruments.sql  mixed-identification.csv  mixed-tx-types.csv  reupload-modified.csv  seed-record.sql  seed.sql  single-aapl-stock.csv  split-option-tx.csv  split-stock-txs.csv  split-txs.csv  standard-3-stocks.csv  trigger-debounce.sql  tx-update-additional.csv  tx-update-initial.csv  (+1 more)
migrations/: 001_initial_schema.sql  002_initial_staging_schema.sql  002_staging_schema.sql  003_ingestion_schema.sql
scripts/: 50-transactions.json  api-test.sh  convert-ibkr-to-standard.mjs  convert_ibkr.py  create-portfolio.sh  export-instruments.sh  import-local-identifier-ref.sh  ingest-test-data.sh  ingest-txs.sh  init-db.sh  local-identifier-ref.json  postgres-ready.sh  server-ready.sh
src/: auth.rs  database.rs  errors.rs  lib.rs  main.rs  mocks.rs  rpc.rs  transaction.rs
test/: staging.rs
tests/: database.rs  infra.rs  staging.rs
(+420 files in other folders)
