[package]
name = "portfoliodb"
version = "0.1.0"
edition = "2024"

[features]
test_class_database = []
disambiguate = []

[dependencies]
# gRPC
tonic = "0.13"
tonic-web = "0.13"
prost = "0.13"
prost-types = "0.13"
futures = "0.3"

# HTTP server
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
http = "1"
http-body = "0.4"
http-body-util = "0.1"
bytes = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization
pbjson-types = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "mock"] }
sea-query = "0.32"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
anyhow = "1.0"
mockall = "0.12"

[build-dependencies]
tonic-build = "0.13"
pbjson-build = "0.7"
prost-types = "0.13"
prost = "0.13" 